Redo header footer

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,5 @@
 /* @import './base.css'; */
-
+/* 
 #app {
   max-width: 1280px;
   margin: 0 auto;
@@ -30,6 +30,6 @@ a,
   #app {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
+    padding: 0 2rem; 
   }
-}
+} */
