--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -33,3 +33,8 @@ a,
     padding: 0 2rem; 
   }
 } */
+/* src/assets/css/main.css */
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
